<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="U_EveryType" Id="{457977ae-50b6-4b02-acee-56a6f4efb422}">
    <Declaration><![CDATA[TYPE U_EveryType :
UNION
	(* Boolean *)
	boolean : BOOL;
	(* Integer *)
	integer	: LINT;
	(* Unsigned integer *)
	unsignedInteger : ULINT;
	(* Real number *)
	realNumber : LREAL;
	(* Time *)
	some : TIME;
	(* Date *)
	out : DATE;

END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>